SAK-16896
git-svn-id: https://source.sakaiproject.org/svn/site-manage/trunk@66170 66ffb92e-73f9-0310-93c1-f5514f145a0a